--- a/WebControlCenter/style.css
+++ b/WebControlCenter/style.css
@@ -2,12 +2,28 @@ body {
   all: unset;
 }
 
+.layout {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
+  place-items: center center;
+  gap: 1rem;
+}
+
+#remoteVideo {
+  width: 100%;
+  /* fill first two columns */
+  grid-column: 1 / 4;
+  aspect-ratio: 4 / 3;
+}
+
 /* ----- Gamepad styles ----- */
 .gamepad {
-  margin-top: 64px;
+  grid-column: 4 / 6;
   display: grid;
   position: relative;
-  max-width: 500px;
   width: 100%;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(4, 1fr);
